--- a/DDR-Development- v10.9/DDRReport_Tool/app.config
+++ b/DDR-Development- v10.9/DDRReport_Tool/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="DB-DDR" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Documents and Settings\Administrator\Desktop\DDR_GIT\DDR\DDR-Development- v10.9\Database\ddr.accdb"/>
-    <!--<add key="DB-DDR" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\192.168.2.2\00 - Departments\Daily Reports\DDR System\database\ddr.accdb" />-->
+    <!--<add key="DB-DDR" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Documents and Settings\Administrator\Desktop\DDR_GIT\DDR\DDR-Development- v10.9\Database\ddr.accdb"/>-->
+    <add key="DB-DDR" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\192.168.2.2\00 - Departments\Daily Reports\DDR System\database\ddr.accdb" />
     <!--<add key="DB-DDR" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=\\192.168.2.2\00 - Departments\Daily Reports\DDR System\database\ddr - test.accdb"/>-->
     <add key="EmailUserCredential" value="it" />
     <add key="EmailPasswordCredential" value="6dgg5tlwr" />
